[Bug 866527] Fix ctypes rooting hazards r=terrence